--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="/js/vendor/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/js/ie10-viewport-bug-workaround.js"></script>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
@@ -92,7 +92,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="../assets/images/slideshow-1.jpg" alt="First slide">
+          <img class="first-slide" src="assets/images/slideshow-1.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Example headline.</h1>
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="../assets/images/slideshow-2.jpg" alt="Second slide">
+          <img class="second-slide" src="assets/images/slideshow-2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -112,7 +112,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="/assets/images/slideshow-3.jpg" alt="Third slide">
+          <img class="third-slide" src="assets/images/slideshow-3.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>One more for good measure.</h1>
