image size update

--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="assets/images/feature1.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Eat Well.</p>
+          <img class="img-circle" src="assets/images/feature1.jpg" alt="Generic placeholder image" width="200" height="">
+          <h2>Eat Well.</h2>
+          <p>Energizing bars to get you through the day.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="assets/images/feature2.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Live Well.</p>
+          <img class="img-circle" src="assets/images/feature2.jpg" alt="Generic placeholder image" width="200" height="">
+          <h2>Live Well.</h2>
+          <p>Delicious snacks for any occasion.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="assets/images/feature3.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Be Well.</p>
+          <img class="img-circle" src="assets/images/feature3.jpg" alt="Generic placeholder image" width="200" height="">
+          <h2>Be Well.</h2>
+          <p>Cookies so good, you won't want to share.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
