--- a/index.html
+++ b/index.html
@@ -33,24 +33,20 @@
   <body>
     <nav class="navbar navbar-light bg-faded">
       <a class="navbar-brand" href="#">Navbar</a>
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav pull-right">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Store</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#">About Me</a>
         </li>
       </ul>
-      <form class="form-inline navbar-form pull-right">
-        <input class="form-control" type="text" placeholder="Search">
-        <button class="btn btn-success-outline" type="submit">Search</button>
-      </form>
     </nav>
 
 
