--- a/index.html
+++ b/index.html
@@ -32,21 +32,23 @@
 ================================================== -->
   <body>
     <nav class="navbar navbar-light bg-faded">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <ul class="nav navbar-nav pull-right">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Store</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About Me</a>
-        </li>
-      </ul>
+      <div class="container">
+        <a class="navbar-brand" href="#">Eating Leaves</a>
+        <ul class="nav navbar-nav pull-right">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Store</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Me</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
 
