--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <div class="carousel-caption">
             <h3>HEALTHY AND DELICIOUS SNACKS</h3>
             <p>RIGHT AT YOUR FINGER TIPS</p>
+          </div>
         </div>
         <div class="carousel-item">
           <img data-src="assets/images/slideshow-2.jpg" alt="Second slide">
