--- a/index.html
+++ b/index.html
@@ -91,23 +91,23 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 text-center">
           <img class="img-circle" src="assets/images/feature1.jpg" alt="Generic placeholder image" width="200" height="">
           <h2>Eat Well.</h2>
           <p>Energizing bars to get you through the day.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Buy Me &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="#" role="button">Buy Me</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 text-center">
           <img class="img-circle" src="assets/images/feature2.jpg" alt="Generic placeholder image" width="200" height="">
           <h2>Live Well.</h2>
           <p>Delicious snacks for any occasion.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Buy Me &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="#" role="button">Buy Me</a></p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 text-center">
           <img class="img-circle" src="assets/images/feature3.jpg" alt="Generic placeholder image" width="200" height="">
           <h2>Be Well.</h2>
           <p>Cookies so good, you won't want to share.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Buy Me &raquo;</a></p>
+          <p><a class="btn btn-secondary" href="#" role="button">Buy Me</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
