--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
     <!-- Custom styles for this template -->
     <link href="css/carousel.css" rel="stylesheet">
   </head>
-<!-- NAVBAR
-================================================== -->
   <body>
     <nav class="navbar navbar-light bg-faded">
       <div class="container">
@@ -59,17 +57,17 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-          <img data-src="assets/images/slideshow-1.jpg" alt="First slide">
+          <img src="assets/images/slideshow-1.jpg" alt="First slide">
           <div class="carousel-caption">
             <h3>HEALTHY AND DELICIOUS SNACKS</h3>
             <p>RIGHT AT YOUR FINGER TIPS</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img data-src="assets/images/slideshow-2.jpg" alt="Second slide">
+          <img src="assets/images/slideshow-2.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img data-src="assets/images/slideshow-3.jpg" alt="Third slide">
+          <img src="assets/images/slideshow-3.jpg" alt="Third slide">
         </div>
       </div>
       <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
