--- a/index.html
+++ b/index.html
@@ -83,13 +83,8 @@
     <p>  
 
 
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
+    <div class="container">
 
-    <div class="container marketing">
-
-      <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4 text-center">
           <img class="img-circle" src="assets/images/feature1.jpg" alt="Generic placeholder image" width="200" height="">
