--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           <div class="carousel-caption">
             <h3>HEALTHY AND DELICIOUS SNACKS</h3>
             <p>RIGHT AT YOUR FINGER TIPS</p>
+            <a class="btn btn-success" href="#" role="button">Buy Me</a>
           </div>
         </div>
         <div class="carousel-item">
