--- a/index.html
+++ b/index.html
@@ -67,9 +67,19 @@
         </div>
         <div class="carousel-item">
           <img src="assets/images/slideshow-2.jpg" alt="Second slide">
+          <div class="carousel-caption">
+            <h3>NEED A PICK-ME-UP?</h3>
+            <p>GRANOLA BARS FOR ANY TIME OF DAY</p>
+            <a class="btn btn-success" href="#" role="button">View Me</a>
+            <p>
         </div>
         <div class="carousel-item">
           <img src="assets/images/slideshow-3.jpg" alt="Third slide">
+          <div class="carousel-caption">
+            <h3>IN A RUSH?</h3>
+            <p>EASY AND AFFORDABLE MEALS YOUR WHOLE FAMILY WILL LOVE</p>
+            <a class="btn btn-success" href="#" role="button">Make Me</a>
+            <p>
         </div>
       </div>
       <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
