--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <p>GRANOLA BARS FOR ANY TIME OF DAY</p>
             <a class="btn btn-success" href="#" role="button">View Me</a>
             <p>
+          </div>
         </div>
         <div class="carousel-item">
           <img src="assets/images/slideshow-3.jpg" alt="Third slide">
@@ -80,6 +81,7 @@
             <p>EASY AND AFFORDABLE MEALS YOUR WHOLE FAMILY WILL LOVE</p>
             <a class="btn btn-success" href="#" role="button">Make Me</a>
             <p>
+          </div>    
         </div>
       </div>
       <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
