--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
         <div class="carousel-item active">
           <img src="assets/images/slideshow-1.jpg" alt="First slide">
           <div class="carousel-caption">
-            <h3>HEALTHY AND DELICIOUS SNACKS</h3>
-            <p>RIGHT AT YOUR FINGER TIPS</p>
+            <h3 class="carousel-font">HEALTHY AND DELICIOUS SNACKS</h3>
+            <p class="carousel-font">RIGHT AT YOUR FINGER TIPS</p>
             <a class="btn btn-success" href="#" role="button">Buy Me</a>
-            <p>
+            <p> 
           </div>
         </div>
         <div class="carousel-item">
           <img src="assets/images/slideshow-2.jpg" alt="Second slide">
           <div class="carousel-caption">
-            <h3>NEED A PICK-ME-UP?</h3>
-            <p>GRANOLA BARS FOR ANY TIME OF DAY</p>
+            <h3 class="carousel-font">NEED A PICK-ME-UP?</h3>
+            <p class="carousel-font">GRANOLA BARS FOR ANY TIME OF DAY</p>
             <a class="btn btn-success" href="#" role="button">View Me</a>
             <p>
           </div>
@@ -77,8 +77,8 @@
         <div class="carousel-item">
           <img src="assets/images/slideshow-3.jpg" alt="Third slide">
           <div class="carousel-caption">
-            <h3>IN A RUSH?</h3>
-            <p>EASY AND AFFORDABLE MEALS YOUR WHOLE FAMILY WILL LOVE</p>
+            <h3 class="carousel-font">IN A RUSH?</h3>
+            <p class="carousel-font">EASY AND AFFORDABLE MEALS YOUR WHOLE FAMILY WILL LOVE</p>
             <a class="btn btn-success" href="#" role="button">Make Me</a>
             <p>
           </div>    
