--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
           <img src="assets/images/slideshow-1.jpg" alt="First slide">
-          <div class="carousel-caption">
+          <div class="carousel-caption text-left">
             <h3 class="carousel-font">HEALTHY AND DELICIOUS SNACKS</h3>
             <p class="carousel-font">RIGHT AT YOUR FINGER TIPS</p>
             <a class="btn btn-success" href="#" role="button">Buy Me</a>
@@ -67,7 +67,7 @@
         </div>
         <div class="carousel-item">
           <img src="assets/images/slideshow-2.jpg" alt="Second slide">
-          <div class="carousel-caption">
+          <div class="carousel-caption text-right"> 
             <h3 class="carousel-font">NEED A PICK-ME-UP?</h3>
             <p class="carousel-font">GRANOLA BARS FOR ANY TIME OF DAY</p>
             <a class="btn btn-success" href="#" role="button">View Me</a>
