--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <div class="carousel-item">
           <img src="assets/images/slideshow-3.jpg" alt="Third slide">
           <div class="carousel-caption">
-            <h3 class="carousel-font">IN A RUSH?</h3>
-            <p class="carousel-font">EASY AND AFFORDABLE MEALS YOUR WHOLE FAMILY WILL LOVE</p>
+            <h3>IN A RUSH?</h3>
+            <p>EASY AND AFFORDABLE MEALS YOUR WHOLE FAMILY WILL LOVE</p>
             <a class="btn btn-success" href="#" role="button">Make Me</a>
             <p>
           </div>    
