--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <nav class="navbar navbar-light bg-faded">
       <div class="container">
-        <a class="navbar-brand" href="#">Eating Leaves</a>
+        <a class="navbar-brand" href="#"><img src="assets/images/Eating-Leaves-Logo.png"></a>
         <ul class="nav navbar-nav pull-right">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
