--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link" href="#">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="posts/about-me.html">About Me</a>
           </li>
         </ul>
       </div>
