--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a class="navbar-brand" href="#"><img src="assets/images/Eating-Leaves-Logo.png" height="110" width=""></a>
         <ul class="nav navbar-nav pull-right">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Store</a>
