--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Store</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Store</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">About the Eating Leaves Store</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Blog</a>
