--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
           <img class="img-circle" src="assets/images/feature1.jpg" alt="Generic placeholder image" width="200" height="">
           <h4>Eat Well.</h4>
           <p>Energizing bars to get you through the day.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Buy Me</a></p>
+          <p><a class="btn btn-secondary btn-sm" href="#" role="button">Buy Me</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4 text-center">
           <img class="img-circle" src="assets/images/feature2.jpg" alt="Generic placeholder image" width="200" height="">
           <h4>Live Well.</h4>
           <p>Delicious snacks for any occasion.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Buy Me</a></p>
+          <p><a class="btn btn-secondary btn-sm" href="#" role="button">Buy Me</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4 text-center">
           <img class="img-circle" src="assets/images/feature3.jpg" alt="Generic placeholder image" width="200" height="">
           <h4>Be Well.</h4>
           <p>Cookies so good, you won't want to share.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Buy Me</a></p>
+          <p><a class="btn btn-secondary btn-sm" href="#" role="button">Buy Me</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
